# moon-engine

./: CMakeLists.txt  Map.cpp  Map.h  README.md  auxillary_functions.h  main.cpp
exampmle-level/: entities.json  map.json
src/: auxillary_functions.h  main.cpp
src/Entity/: Bullet.cpp  Bullet.h  EnemyBehavior.cpp  Entity.cpp  Entity.h  NPCBehavior.cpp  PlayerBehavior.cpp
src/Game/: Game.cpp  Game.h  Light.cpp  Light.h  Map.cpp  Map.h
src/Game/UI/: UIElement.cpp  UIElement.h
src/Physics/: Collision.cpp  Collision.h
